--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,43 @@
-body {
-    padding-top: 100px;
-  }
+html,
+body
+{
+    height: 100%;
+    font-family: 'Roboto', sans-serif;
+    color: #333;
+}
 
-  @media (min-width: 992px) {
+ @media (min-width: 992px) {
     body {
-      padding: 50px 100px;
+      padding: 50px;
       margin-left: 100px;
       margin-right: 100px;
     }
   }
 
   #map {
-    margin-top: 50px;
+    margin-top: 32px;
+    margin-bottom:50px;
     width: 100%;
-    height: 500px;
-    /* min-height: 100%; */
+    height: 600px;
+    /* height: 100%; */
     background: #777777;
     /* display: block; */
   }
 
   .navbar {
-    background-color: #09324e;
+    /* background-color: #337ab7; */
     padding-left: 25px;
     padding-right: 25px;
+    margin-bottom: 0;
   }
+
+  .navbar-inverse .navbar-brand {
+    color: #fff;
+}
 
  .form {
-    display: block;
+    /* display: block; */
     margin-left: auto;
     margin-right: auto;
-    margin: 10px;
+    /* margin: 50px; */
   }
-
-/* 
-  @media only screen 
-    and (min-device-width : 414px) 
-    and (max-device-width : 736px)
-    and (device-width : 414px)
-    and (device-height : 736px)
-    and (orientation : portrait) 
-    and (-webkit-min-device-pixel-ratio : 3) 
-    and (-webkit-device-pixel-ratio : 3)
-{
-    .form-control {
-        margin: 30px;
-      }
-} */
