--- a/css/style.css
+++ b/css/style.css
@@ -1,47 +1,37 @@
 html,
-body
-{
+body {
+    padding-top: 25px;
     height: 100%;
     font-family: 'Roboto', sans-serif;
     color: #333;
+    margin-left: 100px;
+    margin-right: 100px;
 }
 
-h1 {
-  margin-bottom: 20px;
-}
-
- @media (min-width: 992px) {
-    body {
-      padding: 50px;
-      margin-left: 100px;
-      margin-right: 100px;
-    }
-  }
-
-  #map {
+#map {
     margin-top: 32px;
-    margin-bottom:50px;
+    margin-bottom: 45px;
     width: 100%;
     height: 600px;
     /* height: 100%; */
     background: #777777;
     /* display: block; */
-  }
+}
 
-  .navbar {
+.navbar {
     /* background-color: #337ab7; */
     padding-left: 25px;
     padding-right: 25px;
     margin-bottom: 0;
-  }
+}
 
-  .navbar-inverse .navbar-brand {
+.navbar-inverse .navbar-brand {
     color: #fff;
 }
 
- .form {
+.form {
     /* display: block; */
     margin-left: auto;
     margin-right: auto;
     /* margin: 50px; */
-  }
+}
