--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,18 @@
 html,
 body {
-    padding-top: 25px;
+    padding-top: 3%;
     height: 100%;
     font-family: 'Roboto', sans-serif;
     color: #333;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 #map {
-    margin-top: 32px;
-    margin-bottom: 45px;
+    margin-top: 3%;
+    margin-bottom: 3%;
     width: 100%;
-    height: 600px;
+    height: 75%;
     /* height: 100%; */
     background: #777777;
     /* display: block; */
@@ -30,8 +30,6 @@ body {
 }
 
 .form {
-    /* display: block; */
     margin-left: auto;
     margin-right: auto;
-    /* margin: 50px; */
 }
