--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,16 @@
 html,
 body {
-    padding-top: 3%;
+    padding-top: 2%;
     height: 100%;
     font-family: 'Roboto', sans-serif;
     color: #333;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: 2%;
+    margin-right: 2%;
 }
 
 #map {
-    margin-top: 3%;
-    margin-bottom: 3%;
+    margin-top: 2%;
+    margin-bottom: 2%;
     width: 100%;
     height: 75%;
     /* height: 100%; */
@@ -33,3 +33,37 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
+
+
+/***  Devices ***/
+
+
+/* ipad */
+
+@media only screen and (min-width: 700px) {
+    body {
+        padding-top: 4%;
+    }
+}
+
+
+/* iphone 6s plus */
+
+@media only screen and (max-width: 450px) {
+    body {
+        padding-top: 8%;
+    }
+    .form-control {
+      margin: 3%;
+    }
+}
+
+
+/* Galaxy 5S */
+
+@media only screen and (max-width: 375px) {}
+
+
+/* iphone 5 */
+
+@media only screen and (max-width: 320px) {}
