--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,8 @@ body {
     height: 100%;
     font-family: 'Roboto', sans-serif;
     color: #333;
-    margin-left: 2%;
-    margin-right: 2%;
+    margin-left: 4%;
+    margin-right: 4%;
 }
 
 #map {
@@ -40,30 +40,28 @@ body {
 
 /* ipad */
 
-@media only screen and (min-width: 700px) {
+
+/* Landscape */
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
     body {
-        padding-top: 4%;
+        padding-top: 3%;
+        margin-left: 2%;
+        margin-right: 2%;
     }
 }
 
 
-/* iphone 6s plus */
+/* iphone 6+, 7+, 8+ */
 
-@media only screen and (max-width: 450px) {
+
+/* Portrait */
+
+@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {
     body {
         padding-top: 8%;
     }
     .form-control {
-      margin: 3%;
+        margin-bottom: 15px;
     }
 }
-
-
-/* Galaxy 5S */
-
-@media only screen and (max-width: 375px) {}
-
-
-/* iphone 5 */
-
-@media only screen and (max-width: 320px) {}
